# Embedded_motion_control

./: README.md
EMC_project/: CMakeLists.txt
EMC_project/Maps/Hospital/: Hospital_Scaled.pgm
EMC_project/src/: config.h  instances.h  main.cpp  objects.h  vector2.h
EMC_project/src/Json_maps/: Example.json  Global_fit.json  Hospital_thick.json  Testing.json  Testing_nodes.json  finalmap.json
EMC_project/src/drive_control/: drive_control.cpp  drive_control.h  pid_control.cpp  pid_control.h
EMC_project/src/graph/: graph.cpp  graph.h
EMC_project/src/path_planner/: definitions.h  path_planner.cpp  path_planner.h
EMC_project/src/perception/: perception.cpp  perception.h
EMC_project/src/pid_control/: pid_control.cpp  pid_control.h
EMC_project/src/task_manager/: task_manager.cpp  task_manager.h  tasks.h
EMC_project/src/visualisation/: visualisation.cpp  visualisation.h
EMC_project/src/world_model/: world_model.cpp  world_model.h
MeasurementData/: 2019-05-07-16-56-18.bag
